# receiver/openapi.yaml
@@ -53,6 +53,18 @@ paths:
           description: item created
         "400":
           description: invalid input, object invalid
+  /health:
+    get:
+      tags:
+        - admins
+      summary: Gets the event health
+      operationId: app.get_health
+      description: Gets status of each of the Receiver, Storage, Processing and Audit services
+      responses:
+        "200":
+          description: Service is running
+        "400":
+          description: Service is down
 components:
   schemas:
     checkIn:
